--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link href="main.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
-    <h1>Hello Heather!</h1>
-    <p>Hiya!</p>
+    <h1>Hello Mum!</h1>
+    <p>Happy 25th April!</p>
 
 
 
